# open-dj

./: .gitignore  CLAUDE.md  README.md  package.json  vite.config.js
.claude/: settings.local.json
.cursor/rules/: project-rules.mdc  svelte-rules.mdc
src/: CLAUDE.md
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_analysis.rs  audio_effects.rs  audio_playback.rs  audio_processor.rs  bpm_analyzer.rs  config.rs  errors.rs  lib.rs  main.rs  playback_types.rs
src-tauri/src/audio/: config.rs  decoding.rs  effects.rs  errors.rs  mod.rs  playback.rs  processor.rs  types.rs
src-tauri/src/audio/analysis/: bpm_analyzer.rs  mod.rs  volume_analyzer.rs
src-tauri/src/audio/cache/: README.md  commands.rs  fingerprint.rs  index.rs  mod.rs  storage.rs
src-tauri/src/audio/devices/: commands.rs  cpal_fallback.rs  linux.rs  macos.rs  mod.rs  store.rs  windows.rs
src-tauri/src/audio/playback/: commands.rs  events.rs  handlers.rs  state.rs  sync.rs  time.rs
src-tauri/src/audio/playback/handlers/: audio_effects.rs  cue_output.rs  init.rs  mod.rs  playback.rs  track.rs
src/lib/: constants.ts  types.ts
src/lib/components/: AudioDeviceSelector.svelte  AudioPlayer.svelte  Crossfader.svelte  DeckController.svelte  DeckControls.svelte  FileSelector.svelte  MusicLibrary.svelte  Slider.svelte  TrackPlayer.svelte  VerticalSlider.svelte  VolumeAnalysis.svelte  WaveformDisplay.svelte  WebGLWaveformRenderer.svelte
src/lib/stores/: audioStore.ts  deckStore.ts  libraryStore.ts  playerStore.ts  syncStore.ts
src/lib/utils/: timeUtils.ts  webglWaveformUtils.ts
src/routes/: +page.svelte
