# ──────────────────────────────────────────────────────────────
[workspace]
resolver = "2"

# ──────────────────────────────────────────────────────────────
# Package Definition
# ──────────────────────────────────────────────────────────────
[package]
name = "open-dj"
version = "0.1.0"
edition = "2024"
description = "A Tauri App"
authors = ["collinmurch"]

# ──────────────────────────────────────────────────────────────
# Library Configuration
# ──────────────────────────────────────────────────────────────
[lib]
name = "open_dj_lib"
path = "src/lib.rs"
crate-type = ["rlib"]

# ──────────────────────────────────────────────────────────────
# Build Dependencies
# ──────────────────────────────────────────────────────────────
[build-dependencies.tauri-build]
version = "2.2"
default-features = false
features = []

# ──────────────────────────────────────────────────────────────
# Dependencies
# ──────────────────────────────────────────────────────────────
[dependencies]
# --- Security Fix: Force glib >=0.20 to fix RUSTSEC-2024-0429 ---
glib = ">=0.20.0"

# --- Tauri Core ---
tauri = { version = "2.5.0", features = [] }

# --- Tauri Plugins ---
tauri-plugin-opener = { version = "2.2", default-features = false }
tauri-plugin-dialog = { version = "2.2", default-features = false }
tauri-plugin-fs = { version = "2.2", default-features = false }

# --- Audio Libraries ---
symphonia = { version = "0.5.3", features = ["mp3", "flac", "wav", "aac"] }
cpal = { version = "0.15.3", default-features = false }
rustfft = { version = "6.2", default-features = false }
biquad = "0.4.0"
rubato = { version = "0.13.0", default-features = false }

# --- Utility & Misc Libraries ---
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
log = { version = "0.4.20", default-features = false }
rayon = { version = "1.10", default-features = false }
num = { version = "0.4", default-features = false }
lazy_static = "1.5"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
tokio = { version = "1.32.0", features = ["sync", "time", "rt", "macros"], default-features = false }
thiserror = "1.0.50"
blake3 = { version = "1.5", default-features = false }

# ──────────────────────────────────────────────────────────────
# Profiles
# ──────────────────────────────────────────────────────────────
[profile.dev]
opt-level = 1
debug = 1
incremental = true
codegen-units = 64

[profile.dev.package."*"]
opt-level = 1
debug = false

# Critical audio processing crates need higher optimization
[profile.dev.package.rustfft]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 2

[profile.dev.package.rayon]
opt-level = 2
